// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Movie /> Loads and shows information about the movie 1`] = `
<div>
  <header
    class="header"
  >
    <h1>
      Movie Facts
    </h1>
  </header>
  <nav>
    <ul>
      <li>
        <a
          href="/movie"
        >
          All movies
        </a>
      </li>
      <li>
        <a
          href="/category"
        >
          All categories
        </a>
      </li>
      <li>
        <a
          href="/search"
        >
          Search
        </a>
      </li>
    </ul>
  </nav>
  <section
    class="main"
  >
    <div>
      <h2>
        12 Years a Slave
         (
        2013
        )
      </h2>
      <form
        aria-label="Add category to movie"
      >
        <label>
          <span>
            New category
          </span>
          <select>
            <option>
              Choose a category
            </option>
          </select>
        </label>
        <button
          type="submit"
        >
          Submit
        </button>
      </form>
      <ul>
        <li>
          <button
            aria-label="delete category Drama"
            value="3"
          >
            delete
          </button>
          <a
            href="/category/3"
          >
            Drama
          </a>
        </li>
      </ul>
    </div>
  </section>
</div>
`;

exports[`<Movie /> What happens if the id doesn't exist tho... 1`] = `
<div>
  <header
    class="header"
  >
    <h1>
      Movie Facts
    </h1>
  </header>
  <nav>
    <ul>
      <li>
        <a
          href="/movie"
        >
          All movies
        </a>
      </li>
      <li>
        <a
          href="/category"
        >
          All categories
        </a>
      </li>
      <li>
        <a
          href="/search"
        >
          Search
        </a>
      </li>
    </ul>
  </nav>
  <section
    class="main"
  >
    <p>
      Failed: 
      Error: Not Found
    </p>
  </section>
</div>
`;
